# fachkurs_quantitative_biologie

./: .gitignore  README.md  pyproject.toml
source/: LorenzSystem.py  Lotka-Volterra.jl  bier_model.py  boolean_network.py  cellular_automata.py  coupled_oscillations.py  euler.py  fitzhugh-nagumo.jl  glycolysis_network.py  maps.py  metabolic_network.py  odeint.py  phaseportrait.jl  scanning_parameter.py  test.py  wolf_model.py
