[tool.poetry]
name = "fachkurs_qb"
version = "0.1.0"
description = "all scripts for the fackurs 'quantitative biology'"
authors = ["Jan N Piotraschke <piotrasj@hu-berlin.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.0"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
ipython = "^7.30.1"
jupyter = "^1.0.0"
pandas = "^1.3.5"
sympy = "^1.9"
nose = "^1.3.7"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
